friends fixes + favicon